--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     margin: 0;
    }
 </style>
-<body>
+<body bgcolor="222222">
 
-	<canvas id='ex' ></canvas>
+	<canvas id='ex' margin='0'></canvas>
 
 	<script type="text/javascript" src="link.js">			</script>
 	<script type="text/javascript" src="statements.js">		</script>
